@@ -4,6 +4,9 @@ UNRELEASED, S3QL HEAD
     is now used in favor of threads in many places, and libfuse 3.x is used instead of
     libfuse 2.x.
 
+  * S3QL is now uses kernel-side writeback caching, which should significantly improve
+    write performance for small block sizes.
+
   * The dependency on the llfuse Python module has been dropped. A dependency on the `trio
     <https://github.com/python-trio/trio`_ and `pyfuse3
     <https://github.com/libfuse/pyfuse3/>`_ modules has been added instead.
